Fixed flickering channels when scrolling

--- a/src/theme/sidebar/_container.scss
+++ b/src/theme/sidebar/_container.scss
@@ -37,7 +37,4 @@
 		background: var(--bg-border);
 		margin: 0;
 	}
-	.content__99f8c > div[aria-hidden='true']:first-child {
-		display: none;
-	}
 }
